# Radiology

./: README.md  User_Prompts_Templates.md  liver_iron_quanitification.html
Heart Parcer/: README.md  example inputs and outputs MRI.txt  example inputs and outputs TMVR.txt  heart_parser_web.html  idea.md
Lecture of the Future/: idea.md
PET Report Parser/: Instruction.md  Instructions.md  PET_report_parser_lymphoma.html  PET_report_parser_web.html  README.md
Radiology_ML_Project_Questions/: README.md  before_start.md  upon_completion.md
Time Difference Calculator/: README.md  specification.md  time_difference.html
Timer Difference Calculalculator/: idea.md
basic PACS/: .gitignore  CLAUDE.md  README.md  idea.md  main.py
basic PACS/rust_version/: .gitignore  Cargo.toml  README.md
basic PACS/rust_version/src/: errors.rs  lib.rs  loader.rs  loading.rs  main.rs  presets.rs  sorting.rs  stack.rs  viewer.rs  windowing.rs
basic PACS/rust_version/tests/: cli_info.rs  cli_list.rs  cli_render.rs  fixture_smoke.rs  loader.rs  presets.rs  sorting.rs  stack.rs  windowing.rs
basic PACS/rust_version/tests/common/: mod.rs
checklist_reader/: idea.md
dictation software with AI built-in/: .env.example  .gitignore  Instruction.md  README.md  build_exe.bat  idea.md  project-plan.md  pyproject.toml  requirements.txt
dictation software with AI built-in/.claude/: settings.local.json
dictation software with AI built-in/docs/superpowers/plans/: 2026-04-19-spoken-punctuation.md  2026-04-21-editable-transcript.md  2026-04-22-profiling-pass.md  2026-04-22-streaming-commit-split.md  2026-04-23-ollama-impression-poc.md  2026-04-23-structure-report.md  2026-04-23-warmup-ux.md  2026-04-26-field-navigation.md  project-plan.md
dictation software with AI built-in/docs/superpowers/profiling/: 2026-04-22-0204-profile.md  2026-04-22-1606-profile.md  2026-04-24-0038-profile.md
dictation software with AI built-in/docs/superpowers/specs/: 2026-04-19-spoken-punctuation-design.md  2026-04-21-editable-transcript-design.md  2026-04-22-profiling-pass-design.md  2026-04-22-streaming-commit-split-design.md  2026-04-23-ollama-impression-poc-design.md  2026-04-23-structure-report-design.md  2026-04-23-warmup-ux-design.md  2026-04-26-field-navigation-design.md
dictation software with AI built-in/src/: main.py
dictation software with AI built-in/src/ai/: _common.py  gemma_stt_client.py  llm_client.py  local_whisper_client.py  medasr_stt_client.py  moonshine_stt_client.py  ollama_client.py  parakeet_stt_client.py  sensevoice_stt_client.py  stt_registry.py  vosk_stt_client.py  whisper_client.py
dictation software with AI built-in/src/core/: commit_splitter.py  orchestrator.py  streaming.py  vad.py
dictation software with AI built-in/src/engine/: lexicon.py  pipeline.py  punctuation.py  wedge.py
dictation software with AI built-in/src/hardware/: global_hotkey.py  mic_listener.py  recorder.py
dictation software with AI built-in/src/network/: pacs_query.py
dictation software with AI built-in/src/security/: encryption.py  scrubber.py
dictation software with AI built-in/src/ui/: field_navigator.py  llm_worker.py  main_window.py  stop_path_worker.py  styles.py  text_streaming_controller.py  warmup_coordinator.py
dictation software with AI built-in/src/utils/: config.py  profiler.py  settings.py
dictation software with AI built-in/tests/integration/: test_orchestrator.py  test_pacs_query.py  test_streaming_pipeline.py  test_wedge.py
dictation software with AI built-in/tests/unit/: conftest.py  test_commit_splitter.py  test_encryption.py  test_field_navigator.py  test_gemma_stt_client.py  test_global_hotkey.py  test_lexicon.py  test_llm_client.py  test_main_window.py  test_medasr_stt_client.py  test_mic_listener.py  test_moonshine_stt_client.py  test_ollama_client.py  test_orchestrator.py  test_parakeet_stt_client.py  test_profile_pipeline_dryrun.py  test_profiler.py  test_profiling_benchmarks_setup.py  test_profiling_harness.py  test_profiling_mocks.py  test_profiling_report.py  test_profiling_scenarios.py  test_punctuation.py  test_recorder.py  test_scrubber.py  test_sensevoice_stt_client.py  test_settings.py  test_streaming.py  test_stt_base.py  test_vad.py  test_vosk_stt_client.py  test_warmup_coordinator.py  test_whisper_client.py
dictation software with AI built-in/tools/: hid_probe.py  profile_pipeline.py
dictation software with AI built-in/tools/profiling/: benchmarks_setup.py  harness.py  mocks.py  report.py  scenarios.py
hot_lab_sim/: .gitignore  idea.md  plan.md  training_sources.md
radiology schedule maker/: .gitignore  Cargo.toml  Trunk.toml  index.html  plan.md  style.css
radiology schedule maker/docs/superpowers/specs/: 2026-07-18-rotations-cadence-design.md
radiology schedule maker/real_example_schedules/: JULY2026_example_schedule.xlsx  JUNE2026_example_schedule.xlsx
radiology schedule maker/src/: app.rs  lib.rs  main.rs
radiology schedule maker/src/components/: email_modal.rs  grid.rs  ledger.rs  mod.rs  nav.rs  radiologists.rs  rotations.rs  sheets_modal.rs  swap_modal.rs  vacations.rs
radiology schedule maker/src/models/: holiday.rs  mod.rs  radiologist.rs  schedule.rs  service.rs  vacation.rs
radiology schedule maker/src/solver/: constraints.rs  cost.rs  engine.rs  incremental.rs  mod.rs
radiology schedule maker/src/utils/: calendar.rs
radiology schedule maker/tests/: calendar_tests.rs  incremental_scorer_tests.rs  model_tests.rs  solver_tests.rs
resident case file/: plan.md
video from pictures/: README.md  SECURITY_DEPLOYMENT_GUIDE.md  dataSecurityConfig.js  errorCodeManager.js  errorCodeSystem.js  fileSystemAccess.js  idea.md  index.html  offline_demo.html  phase2_implementation_notes.md  phase2_step2_3_implementation_notes.md  phase3_live_demo.html  phase3_step3_1_implementation_notes.md  phase3_step3_2_implementation_notes.md  phase3_step3_3_implementation_notes.md  specification.md  standalone_test.html  successFailureReporter.js  test_runner_comprehensive.html  test_step1_1.js  test_step1_4.js  test_step2_2.js  test_step2_3.js  (+3 more)
(+110 files in other folders)
