[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiology-dictation"
version = "0.1.0"
description = "Local, privacy-first AI dictation platform for radiology workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matthew Harwood, MD" }]
license = { text = "Proprietary" }
keywords = ["radiology", "dictation", "whisper", "asr", "llm", "dicom", "pacs"]

dependencies = [
    "PyQt6>=6.6",
    "loguru>=0.7",
    "requests>=2.31",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "hidapi>=0.14",
    "pynetdicom>=2.1",
    "pydicom>=2.4",
    "cryptography>=41",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
]
# Optional GPU acceleration: pip install -e '.[gpu]'
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
# Optional Gemma 4 STT backend: pip install -e '.[gemma]'
# Requires HF license acceptance for google/gemma-4-E2B or E4B.
# pillow + torchvision are hard transitives of Gemma4Processor even though we
# only feed it audio: the multimodal processor imports PIL and torchvision
# unconditionally at load time to register the image/video branches.
gemma = [
    "transformers>=4.50",
    "torch>=2.3",
    "torchvision>=0.18",
    "accelerate>=0.33",
    "pillow>=10",
    # 4-bit quantized Gemma variants (CUDA-only).
    "bitsandbytes>=0.43",
]
# Optional Moonshine STT backend (Useful Sensors): pip install -e '.[moonshine]'
# Dedicated ASR, small (~60 MB), fast on CPU. ONNX Runtime flavor — avoids
# the PyTorch-version pin on the torch-flavored `useful-moonshine` package,
# which doesn't currently ship wheels for Python 3.13.
moonshine = [
    "useful-moonshine-onnx",
]
# Optional NVIDIA Parakeet-TDT STT backend: pip install -e '.[parakeet]'
# Requires NeMo toolkit (large install, ~1 GB+); GPU strongly recommended.
parakeet = [
    "nemo_toolkit[asr]>=2.0",
]
# Optional Vosk STT backend: pip install -e '.[vosk]'
# Models must be downloaded manually from https://alphacephei.com/vosk/models
# and the unpacked directory path set in VOSK_MODEL_PATH.
vosk = [
    "vosk>=0.3.45",
]

[project.scripts]
radiology-dictation = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "services*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
