[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiology-dictation"
version = "0.1.0"
description = "Local, privacy-first AI dictation platform for radiology workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Matthew Harwood, MD" }]
license = { text = "Proprietary" }
keywords = ["radiology", "dictation", "whisper", "asr", "llm", "dicom", "pacs"]

dependencies = [
    "PyQt6>=6.6",
    "loguru>=0.7",
    "requests>=2.31",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "hidapi>=0.14",
    "pynetdicom>=2.1",
    "pydicom>=2.4",
    "cryptography>=41",
    "faster-whisper>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "pyinstrument>=4.6",
    "soundfile>=0.12",
]
# Optional GPU acceleration: pip install -e '.[gpu]'
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
# Optional SenseVoice STT backend (Alibaba FunASR): pip install -e '.[sensevoice]'
# Small multilingual ASR (~100M params) with emotion + event tagging.
# funasr needs torchaudio at import time but doesn't declare it as a hard dep
# on Python 3.13 — pin it explicitly so the extra is self-contained.
sensevoice = [
    "funasr>=1.1",
    "torch>=2.3",
    "torchaudio>=2.3",
]
# Optional MedASR STT backend (Google Health AI): pip install -e '.[medasr]'
# Conformer ASR (~105M params) trained on physician dictation — ~4.6% WER
# on radiology per Google's benchmarks. Needs transformers main until the
# next release ships; requires HF login + accepting the Health AI
# Developer Foundations terms on huggingface.co/google/medasr.
medasr = [
    "transformers>=4.57",
    "torch>=2.3",
]
# Optional: build a standalone Windows .exe via Nuitka.
# pip install -e '.[build]'  then  build_exe.bat
build = [
    "nuitka>=2.4",
    "zstandard>=0.22",
]

[project.scripts]
radiology-dictation = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "services*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
