[package]
name = "radiology-schedule-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gloo-storage = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Storage",
    "Clipboard",
    "Navigator"
] }
log = "0.4"
wasm-logger = "0.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
